# engine

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  DEMO_SCRIPT_UPGRADE_PLAN.md  Dockerfile  Dockerfile.dev  Dockerfile.test  EP.md  EPF.md  FEATURE_CHECKLIST.md  FRONTEND_PLAN.md  FRONTEND_TESTING_IMPROVEMENT_PLAN.md  FUTURE_IMPROVEMENTS_PLAN.md  GEMINI.md  IMPLEMENTATION_STATUS.md  INVESTIGATION_ANSWERS.md  KEYBOARD_SHORTCUTS.md  LESSONS_LEARNED.md  MANUAL_TEST_GUIDE.md  MOCK_EXCHANGE_TEST_PLAN.md  MODEL_MIGRATION_SYNC_REPORT.md  PROJECT_BLUEPRINT.md  QUEUE_PRIORITY_TEST_RESULTS.md  RISK_ENGINE_FIX_PROPOSAL.md  SoW.md  TESTING_IMPROVEMENT_PLAN.md  TESTING_SUMMARY.md  TEST_PLAN_RISK_AND_QUEUE.md  TEST_RESULTS.md  UI_IMPROVEMENTS_SUMMARY.md  UI_REDESIGN_PLAN.md  _test_plan.md  add_missing_column.py  alembic.ini  app_logs.txt  app_logs_after_sim.txt  (+52 more)
.claude/: settings.local.json
alembic/: env.py
archive/: BACKEND_REPORT.md  BACKEND_VERIFICATION_REPORT_PHASE_4.md  EP.md  guidance.md
backend/: reproduce_issue.py
demo_framework/: __init__.py  __main__.py  cli.py  runner.py
docs/: TEST_PLAN.md  blueprint.md  progress_handover.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  healthcheck.sh  nginx.conf  package-lock.json  package.json
mock_exchange/: Dockerfile  README.md  __init__.py  auth.py  database.py  main.py  models.py  order_matching.py  requirements.txt
practical_test/: clear_zmomz_positions.py  close_stuck_positions.py  count_active_positions.py  decrypt_bybit_keys.py  (+14 more)
(+505 files in other folders)
